syntax = "proto3";

option go_package = "../common/proto";


service SharedRegisters {
  rpc GetPhase (GetPhaseReq) returns (GetPhaseRsp) {}
  rpc SetPhase (SetPhaseReq) returns (SetPhaseRsp) {}
}

message GetPhaseReq {
  string key = 1;

}

message GetPhaseRsp {
  StoredValue value = 1;
}

message StoredValue {
  string val = 1;
  TimeStamp ts = 2;
}

message SetPhaseReq {
  string key = 1;
  StoredValue value = 2;
}

message SetPhaseRsp {
}

message TimeStamp {
  uint64 requestNumber = 1;
  string clientID = 2;
}
